# scratchward

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scratch/: __init__.py  __main__.py  cli.py  constants.py  db.py  strategy_model.py  strokes_gained.py  swing_analysis.py
scratch/commands/: __init__.py  analyze.py  course.py  dispersion.py  goal.py  handicap.py  practice.py  round.py  sg.py  strategy.py  train.py
scratch/data/: __init__.py  drills.py  sg_baseline.py
